# nova-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_to_gcp.sh  docker-compose.yml  generate_test_events.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a99ede8830e_create_auth_models.py  16c7bebaec9f_metrics.py  1829a24adbfb_add_developer_analyst_userrole.py  20d7fa647c5e_personalisations_indexes.py  2530b7439876_add_client_side_api_key.py  2b489cdf6ff0_added_roles.py  2b489cdf6ff0_auth_models_table_args.py  302a03d865e9_last_updated_at_default.py  370cd2a18b69_reassign_personalisation.py  3895c4350d44_user_profile_keys.py  3dbe5b69aff0_initial_migration.py  3f34c2f08be5_init.py  44a43d2daa5b_init.py  4a1010eebfbd_refactor.py  4a36fe690250_migration_for_merge_changes.py  4bc77d72f564_add_key_type_to_api_keys.py  4c34a5d9aee7_user_id_unique_fix.py  4f1e2d3c4b5a_add_full_company.py  4f2bc2b1e76c_add_invitations_table.py  5262968b533c_user_exp_personalisation_changes.py  5d6e4bfdd2af_add_invitations_table.py  5fd807fce90a_changes.py  66020925153f_init.py  6a0f06261d5f_index_changes.py  6a3689eca2f9_feature_flag_description_added.py  6af3d9b07e6d_personalisations_is_default.py  753ccdc8f39f_init.py  79d103be4322_create_auth_user_table.py  80c5163de559_create_auth_user_table.py  812918eb453c_create_segments.py  8d3b5831dda4_targeting_rules.py  900000000000_add_authz_tables.py  929afc1b3223_add_is_active_to_personalisations.py  93376d7e42ab_remove_relationships.py  94f14e9ae245_init.py  96a7a1c6813c_campaigns.py  a43052eed194_refactor_campaigns_experiences_many_to_.py  a4e74831560c_init.py  a7c04eab34a2_initial_migration.py  ad43f07058e3_recommendations.py  (+17 more)
docs/: auth.md  evaluation.md  events.md  experiences.md  index.md  invitations.md  metrics.md  objects.md  personalisations.md  recommendations.md  segments.md  users.md
nova_manager/: main.py
nova_manager/core/: base_crud.py  config.py  email.py  enums.py  exceptions.py  log.py  models.py  response_code.py  (+3 more)
scripts/: bootstrap_bigquery.py  run_worker.py
tests/: README.md  auth.sh  cleanup.py  conftest.py  evaluation.sh  events.sh  experiences.sh  invitations.sh  metrics.sh  objects.sh  personalisations.sh  recommendations.sh  run_all.sh  segments.sh  test_auth_flow.py  users.sh
(+94 files in other folders)
