[project]
name = "nova-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi-users[sqlalchemy,jwt] (>=14.0.0)",
    "asyncpg (>=0.30.0)",
    "python-jose (>3.5.0)"
]

  
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio   = "^1.1"
httpx = "^0.28"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
