[project]
name = "nova-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "google-cloud-bigquery (>=3.35.0,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "rq (>=2.4.1,<3.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain (>=0.3.26,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
